# libtmpl_data

./: README.md  pyproject.toml  requirements.txt  setup.py
constants/: log_2_data_001.py  pi_by_180_data_001.py  pi_data_001.py
functions/arccos/: acos.py  acos_pade_data.py  acos_rat_remez_data.py
functions/arcsin/: arcsin.py  asin_pade_data.py  asin_rat_remez_data.py
functions/arctan/: arctan.py  arctan_pade_data.py
functions/besseli0/: besseli0.py  besseli0_asymptotic_data.py  besseli0_asymptotic_empirical_test_001.py  besseli0_asymptotic_empirical_test_002.py  besseli0_chebyshev_data.py  besseli0_chebyshev_empirical_test.py  besseli0_maclaurin_empirical_test.py  besseli0_pade_data.py
functions/coss/: coss.py  coss_near_zero.py  coss_rat_remez.py  coss_tail_end.py
functions/erf/: erf.py  erf_chebyshev_empirical_test_001.py  erf_chebyshev_empirical_test_002.py
functions/erfcx/: erfcx.py
functions/exp/: exp_maclaurin_data.py  exp_pade_data.py  exp_remez_data_001.py  exp_remez_data_002.py
functions/fresnel/: fresnel_auxiliary.py  fresnel_auxiliary_alt.py  fresnel_auxiliary_f.py  fresnel_auxiliary_small.py  fresnel_auxiliary_terms.py  fresnel_cos.py  fresnel_cos_remez_table.py  fresnel_cos_taylor.py  fresnel_sin.py  fresnel_sin_remez_table.py  taylor.py
functions/kb20/: kb20.py
functions/kbmd/: kbmd.py  kbmd20.py  kbmd20_near_zero.py  kbmd20_rat_remez.py  kbmd20_tail_end.py
functions/lambertw/: lambertw.py
functions/normalized_fresnel/: normalized_fresnel_auxiliary.py  normalized_fresnel_auxiliary_alt.py  (+4 more)
tmpld/: __init__.py  constants.py  time.py
(+69 files in other folders)
